<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Logincc">

    <!-- Logo Mentes -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="177dp"
        android:layout_height="168dp"
        android:layout_marginTop="112dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_mentes"
        android:contentDescription="@string/imagem_logo"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_inicial03"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.01999998" />

    <!-- Botão de Login -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_login"
        style="@style/botaoPadrao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/purple_light"
        android:text="@string/login"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:onClick="TelaLogar"/>

    <!-- Botão de Cadastro -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_cadastro"
        style="@style/botaoPadrao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/yellow_light"
        android:text="@string/cadastre_se"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_login"
        android:onClick="TelaCadastro"/>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/texto_inicial05"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_cadastro" />

    <!-- Botão de Convidado -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_convidado"
        style="@style/botaoPadrao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="144dp"
        android:background="@color/blue_light"
        android:text="@string/convidado"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        android:onClick="TelaLoad"/>

</androidx.constraintlayout.widget.ConstraintLayout>